# python-project-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
scripts/: example.py
src/: __init__.py  utils.py
tests/: test_utils.py
